# banking-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/banking_system/: __init__.py  demo.py
src/banking_system/accounts/: __init__.py  enums.py  exceptions.py  models.py
src/banking_system/audit/: __init__.py  enums.py  exceptions.py  log.py  models.py  risk.py
src/banking_system/bank/: __init__.py  exceptions.py  models.py
src/banking_system/clients/: __init__.py  enums.py  models.py
src/banking_system/reports/: __init__.py  audit.py  builder.py  enums.py  models.py
src/banking_system/transactions/: __init__.py  enums.py  exceptions.py  models.py  processor.py  queue.py
tests/: conftest.py  test_package_import.py
tests/integration/: test_reporting_workflow.py
tests/unit/: test_accounts.py  test_advanced_accounts.py  test_audit.py  test_audit_reports.py  test_bank.py  test_clients.py  test_demo.py  test_reporting.py  test_transaction_risk.py  test_transactions.py
